# hello_opengl_and_sdl3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
